# DenseNet-Project

./: .gitignore  main.py  pyproject.toml  requirements.txt  test.py
Dataset_downloader_scripts/: dataset_downloader.py
onClick_boxes/: boxes_onClick.py  old.py
src/: TraningDenseNet.py
src/Aluminium_ingot/: gemini.py  gemini2.py  inference.py  ingots.yaml  model_convert_to_ptl.py  sortedInference.py  studying_image.py  test_gemini.py  train_pytorch.py  webpTojpg.py
src/ComLook/: Dataset.py  full_log.md  inference.py  pipeline.md  train.py
src/Comlook2/: running.py
src/DenseNet/: ModelTestProgramFromCopilot.py  SegmentationDenseNet.py  TrainingDenseNet.py  test.py  testingNewTrainedModel.py
src/FringMarch2026/: batch_train.py  batch_train2.py  inference.py  printing_vertical_line.py  six_figure.py  train.py
src/Segmentation/: deeplabv3Segmentation.py  downloadingDeeplabv3.py  resnet101deeplabv3plus.py  test.py
src/april22_corrosion/: data.yaml  inference.py
src/april24_corrosion/: annotation_visualize.py
src/coalSegment/: Kmeans.py  enhancedColorMask.py  kmeans2.py  percentageBlackRemoved.py  percentageShow.py  visualizingEachSegment.py
src/feb04_FasterRCNN/: pre-trainedRCNN.py  pre-trainedRCNN_segmentation.py  trainingRCNN.py
src/feb11_Deeplabv3/: readme.txt
src/feb12_Deeplabv3_EfficientNet/: DeepLabV3Plus.py  final Model Training Code.py  image-segmentation_training_model.py  newTrainingScript.py  running_model.py  test.py  test2.py  test_running.py  training_segmentation_model.py  trial_testing.py
src/feb20_PCBclassification/: PCBDataset.py  (+4 more)
(+354 files in other folders)
